<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/result"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_size"
        android:textSize="@dimen/minSize"
        android:hint="@string/result"
        app:layout_constraintBottom_toTopOf="@+id/btn_eight" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

    <Button
        android:id="@+id/btn_seven"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven"
        />

    <Button
        android:id="@+id/btn_eight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eight"
        app:layout_constraintBottom_toTopOf="@+id/btn_five"
        app:layout_constraintLeft_toLeftOf="@+id/btn_five"
        app:layout_constraintRight_toRightOf="@+id/btn_five" />
    <Button
        android:id="@+id/btn_nine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nine"
        app:layout_constraintBottom_toBottomOf="@+id/btn_eight"
        app:layout_constraintLeft_toRightOf="@+id/btn_eight"
        app:layout_constraintTop_toTopOf="@+id/btn_eight" />
    <Button
        android:id="@+id/btn_division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/division"
        app:layout_constraintBottom_toBottomOf="@+id/btn_nine"
        app:layout_constraintLeft_toRightOf="@+id/btn_nine"
        app:layout_constraintTop_toTopOf="@+id/btn_nine" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

    <Button
        android:id="@+id/btn_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four"
        app:layout_constraintBottom_toBottomOf="@+id/btn_five"
        app:layout_constraintRight_toLeftOf="@+id/btn_five"
        app:layout_constraintTop_toTopOf="@+id/btn_five" />
    <Button
        android:id="@+id/btn_five"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five"
        />



    <Button
        android:id="@+id/btn_six"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/six"
        app:layout_constraintBottom_toBottomOf="@+id/btn_five"
        app:layout_constraintLeft_toRightOf="@+id/btn_five"
        app:layout_constraintTop_toTopOf="@+id/btn_five"
        app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_multiplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multiplication"
            app:layout_constraintBottom_toBottomOf="@+id/btn_six"
            app:layout_constraintLeft_toRightOf="@+id/btn_six"
            app:layout_constraintTop_toTopOf="@+id/btn_six" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
    <Button
        android:id="@+id/btn_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one"
        app:layout_constraintBottom_toBottomOf="@+id/btn_two"
        app:layout_constraintRight_toLeftOf="@+id/btn_two"
        app:layout_constraintTop_toTopOf="@+id/btn_two" />
    <Button
        android:id="@+id/btn_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two"
        app:layout_constraintLeft_toLeftOf="@id/btn_five"
        app:layout_constraintRight_toRightOf="@+id/btn_five"
        app:layout_constraintTop_toBottomOf="@id/btn_five" />



    <Button
        android:id="@+id/btn_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/three"
        app:layout_constraintBottom_toBottomOf="@+id/btn_two"
        app:layout_constraintLeft_toRightOf="@+id/btn_two"
        app:layout_constraintTop_toTopOf="@+id/btn_two" />
    <Button
        android:id="@+id/btn_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        app:layout_constraintBottom_toBottomOf="@+id/btn_three"
        app:layout_constraintLeft_toRightOf="@+id/btn_three"
        app:layout_constraintTop_toTopOf="@+id/btn_three" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

    <Button
        android:id="@+id/btn_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dot"
        app:layout_constraintLeft_toLeftOf="@id/btn_two"
        app:layout_constraintRight_toRightOf="@+id/btn_two"
        app:layout_constraintTop_toBottomOf="@id/btn_two"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="@+id/btn_dot"
        app:layout_constraintRight_toLeftOf="@+id/btn_dot"
        app:layout_constraintTop_toTopOf="@+id/btn_dot" />

    <Button
        android:id="@+id/btn_equals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equals"
        app:layout_constraintBottom_toBottomOf="@+id/btn_dot"
        app:layout_constraintLeft_toRightOf="@+id/btn_dot"
        app:layout_constraintTop_toTopOf="@+id/btn_dot" />






    <Button
        android:id="@+id/btn_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        app:layout_constraintBottom_toBottomOf="@+id/btn_equals"
        app:layout_constraintLeft_toRightOf="@+id/btn_equals"
        app:layout_constraintTop_toTopOf="@+id/btn_equals"
        />
    </LinearLayout>


    <Button
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        app:layout_constraintLeft_toLeftOf="@id/btn_dot"
        app:layout_constraintRight_toRightOf="@+id/btn_dot"
        app:layout_constraintTop_toBottomOf="@id/btn_dot"

    />

</LinearLayout>